# unreal-mcp

./: .clinerules  .gitignore  .windsurfrules  README.md  mcp.json
.cursor/: mcp.json
.cursor/rules/: python-mcp.mdc  python.mdc  tools.mdc  unreal.mdc
.github/: copilot-instructions.md
Docs/: BuildCookRun.md  README.md
Docs/Tools/: README.md  actor_tools.md  blueprint_tools.md  editor_tools.md  node_tools.md
MCPGameProject/: MCPGameProject.sln  MCPGameProject.uproject
MCPGameProject/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
MCPGameProject/Docs/: REFACTOR_COMMANDS.md
MCPGameProject/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/: UnrealMCPBridge.cpp  UnrealMCPModule.cpp
MCPGameProject/Source/: MCPGameProject.Target.cs  MCPGameProjectEditor.Target.cs
MCPGameProject/Source/MCPGameProject/: MCPGameProject.Build.cs  MCPGameProject.cpp
Python/: PLAN.md  README.md  pyproject.toml  requirements.txt  unreal_mcp_server.py
Python/scripts/actors/: test_cube.py
Python/scripts/blueprints/: README.md  test_basic_blueprint.py  test_component_properties.py  test_create_and_spawn_blueprints_with_different_components.py  test_create_and_spawn_cube_blueprint.py  test_physics_blueprint.py
Python/scripts/node/: test_blueprint_nodes.py  test_component_reference.py  test_create_bird_blueprint_with_input_and_camera.py  test_input_mapping.py  test_physics_variables.py
Python/tools/: __init__.py  actor_tools.py  blueprint_tools.py  editor_tools.py  node_tools.py  umg_tools.py
Python/unreal_mcp/: __init__.py  server.py
Python/unreal_mcp/bridge/: __init__.py  unreal_bridge.py
Python/unreal_mcp/tools/: node_tools.py  project_tools.py
(+14 files in other folders)
